infrastructure/keycloak/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-operator
  namespace: keycloak
  labels:
    app: keycloak-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-operator
  template:
    metadata:
      labels:
        app: keycloak-operator
    spec:
      serviceAccountName: keycloak-operator
      containers:
      - name: keycloak-operator
        image: quay.io/keycloak/keycloak-operator:26.0.5
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
