infrastructure/keycloak/httproute_keycloak-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-internal-https
  namespace: keycloak
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "keycloak.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-keycloakx-http
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-internal-http
  namespace: keycloak
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: web
    namespace: gateway-system
  hostnames:
  - "keycloak.crulabs.intern"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
